# rust

./: main.rs
exercise/a_variables/variables/src/: main.rs
exercise/b_functions/src/: main.rs
exercise/c_simple_types/src/: main.rs
exercise/d_control_flow_strings/src/: main.rs
exercise/e_ownership_references/src/: main.rs
exercise/f_structs_traits/src/: main.rs
exercise/g_collections_enums/src/: main.rs
exercise/h_closures_threads/src/: main.rs
exercise/z_final_project/src/: main.rs
json_watcher/: Cargo.toml  test.json
json_watcher/src/: client.rs  lib.rs  main.rs  server.rs
rustlings/exercises/: quiz1.rs  quiz2.rs
rustlings/exercises/conversions/: from_into.rs  from_str.rs
rustlings/exercises/enums/: enums3.rs
rustlings/exercises/error_handling/: errors2.rs  errors4.rs
rustlings/exercises/functions/: functions3.rs
rustlings/exercises/hashmaps/: hashmaps1.rs  hashmaps3.rs
rustlings/exercises/intro/: intro1.rs
rustlings/exercises/iterators/: iterators3.rs
rustlings/exercises/options/: options1.rs
rustlings/exercises/primitive_types/: primitive_types3.rs
rustlings/exercises/smart_pointers/: box1.rs
rustlings/exercises/strings/: strings3.rs
rustlings/exercises/structs/: structs1.rs  structs2.rs  structs3.rs
rustlings/exercises/threads/: threads2.rs
rustlings/exercises/traits/: traits1.rs
rustlings/exercises/vecs/: vecs1.rs
sandbox/wolacz/: Cargo.toml  readme.md
sandbox/wolacz/src/: lib.rs  main.rs
