[package]
name = "json_watcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "json_watcher-server"
path = "src/server.rs"

[[bin]]
name = "json_watcher-client"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "6.1.1"
log = "0.4.17"
env_logger = "0.10.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hash_map_diff = "0.2.0"
unix-named-pipe = "0.2.0"
ctrlc = "3.1.1"